Fixes #1017: Broken layout in OffCanvasCart when attribute name is to long

--- a/src/Smartstore.Web/Themes/Flex/wwwroot/_cart.scss
+++ b/src/Smartstore.Web/Themes/Flex/wwwroot/_cart.scss
@@ -251,8 +251,9 @@
 
 .cart-item-attrs {
     display: grid !important;
-    grid-template-columns: max-content 1fr; 
-    gap: 1px 12px;
+    grid-template-columns: fit-content(50%) fit-content(50%); 
+    gap: 4px 12px;
+    line-height: 1.2;
 
     > span:nth-child(odd) {
         font-weight: $font-weight-medium;
